--- a/DIENMAYQUYETTIEN/Areas/Admin/Views/InstallmentBill/Index.cshtml
+++ b/DIENMAYQUYETTIEN/Areas/Admin/Views/InstallmentBill/Index.cshtml
@@ -1,94 +1,76 @@
 ﻿@model IEnumerable<DIENMAYQUYETTIEN.Models.InstallmentBill>
 
 @{
-    Layout = null;
+    ViewBag.Title = "Index";
+    Layout = "~/Areas/Admin/Views/Shared/_AdminLayout4.cshtml";
 }
+<link rel="stylesheet" type="text/css" href="~/AreasContent/dataTables.min.css" />
 
-<!DOCTYPE html>
+<h2 style="text-align:center; padding-bottom: 15px;">Danh sách Hóa Đơn Trả Góp</h2>
+<hr />
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Index</title>
-</head>
-<body>
-    <p>
-        @Html.ActionLink("Create New", "Create")
-    </p>
-    <table class="table">
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.BillCode)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Date)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Shipper)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Note)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Method)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Period)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.GrandTotal)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Taken)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Remain)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Customer.CustomerCode)
-            </th>
-            <th></th>
-        </tr>
-    
-    @foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.BillCode)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Date)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Shipper)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Note)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Method)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Period)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.GrandTotal)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Taken)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Remain)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Customer.CustomerCode)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
-                @Html.ActionLink("PrintBill", "PrintBill", new { id=item.ID }) |
-            </td>
-        </tr>
-    }
-    
-    </table>
-</body>
-</html>
+    <table class="table table-bordered table-striped table-hover" id="myTable" width="100%">
+		<thead>
+                <tr>
+                     <th>Bill Code</th>
+                     <th>Customer Name</th>
+                     <th>Date</th>
+                     <th>Shipper</th>
+                     <th>Note</th>
+					 <th>Method</th>
+                     <th>Period</th>
+                     <th>Grand Total</th>
+					 <th>Taken</th>
+					 <th>Remain</th>
+                     <th>Action</th>
+                  </tr>
+		</thead>
+		<tbody>
+			@foreach (var item in Model) {
+				<tr>
+					<td>
+						@Html.DisplayFor(modelItem => item.BillCode)
+					</td>
+					<td>
+						@Html.DisplayFor(modelItem => item.Customer.CustomerCode)
+					</td>
+					<td>
+						@Html.DisplayFor(modelItem => item.Date)
+					</td>
+					<td>
+						@Html.DisplayFor(modelItem => item.Shipper)
+					</td>
+					<td>
+						@Html.DisplayFor(modelItem => item.Note)
+					</td>
+					 <td>
+						@Html.DisplayFor(modelItem => item.Method)
+					</td>
+					<td>
+						@Html.DisplayFor(modelItem => item.Period)
+					</td>
+					<td>
+                        @String.Format("{0:0,0}", item.GrandTotal) VNĐ
+					</td>
+					<th>
+						  @String.Format("{0:0,0}", item.Taken) VNĐ
+					</th>
+					<th>
+						@String.Format("{0:0,0}", item.Remain) VNĐ
+					</th>
+					<td>	
+						
+						
+					</td>
+				</tr>
+			}
+		</tbody>
+	</table>
+@section Scripts{
+    <script type="text/javascript" charset="utf-8" src="~/AreasContent/dataTables.min.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('#myTable').DataTable();
+        });
+    </script>
+}
