--- a/DIENMAYQUYETTIEN/Areas/Admin/Views/ProductAdmin/Index.cshtml
+++ b/DIENMAYQUYETTIEN/Areas/Admin/Views/ProductAdmin/Index.cshtml
@@ -4,13 +4,14 @@
     ViewBag.Title = "Index";
     Layout = "~/Areas/Admin/Views/Shared/_AdminLayout2.cshtml";
 }
+<link rel="stylesheet" type="text/css" href="~/AreasContent/Layout/dataTables.min.css" />
 
-<h2>Danh sách sản phẩm</h2>
+<h2 style="text-align: center; padding-bottom: 15px;">Danh sách sản phẩm</h2>
 <hr />
 <p>
     @Html.ActionLink("Thêm Sản Phẩm", "Create", null, new { @class = "btn btn-primary pull-right", @style = "margin-bottom: 10px" })
 </p>
-     <table class="table table-bordered table-striped table-hover" id="dataTable" width="100%">
+     <table class="table table-bordered table-striped table-hover" id="myTable" width="100%">
             <thead>
                 <tr>
                      <th>Product Code</th>
@@ -51,7 +52,12 @@
                                 <img src="@Url.Action("LoadImage", new { id = item.ID })" width="100" height="100" />
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.Status)
+								@if(item.Status == true){
+									<p> Đã thêm vào hóa đơn </p>
+								}
+								else{
+									<p> Đang chờ </p>
+								}
                             </td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.ProductType.ProductTypeName)
@@ -64,12 +70,13 @@
                     }
                </tbody>
     </table>
-@section Scripts{
+	@section Scripts{
     <script type="text/javascript" charset="utf-8" src="~/AreasContent/Layout/dataTables.min.js"></script>
     <script type="text/javascript">
         $(document).ready(function () {
             $('#myTable').DataTable();
         });
     </script>
-}
+	}
+	
  
