--- a/DIENMAYQUYETTIEN/Areas/Admin/Views/Shared/_AdminLayout2.cshtml
+++ b/DIENMAYQUYETTIEN/Areas/Admin/Views/Shared/_AdminLayout2.cshtml
@@ -13,8 +13,9 @@
 
 
     <!-- Bootstrap core CSS     -->
-	<link rel="stylesheet" type="text/css" href="~/AreasContent/Layout/datatables.min.css"/>
+	<link href="~/AreasContent/Layout/datatables.min.css" rel="stylesheet" />
     <link href="~/AreasContent/Layout/css/bootstrap.min.css" rel="stylesheet" />
+	
 
     <!-- Animation library for notifications   -->
     <link href="~/AreasContent/Layout/css/animate.min.css" rel="stylesheet"/>
@@ -22,8 +23,6 @@
     <!--  Paper Dashboard core CSS    -->
     <link href="~/AreasContent/Layout/css/paper-dashboard.css" rel="stylesheet"/>
 
-    <!--  CSS for Demo Purpose, don't include it in your project     -->
-    <link href="~/AreasContent/Layout/css/demo.css" rel="stylesheet" />
 
     <!--  Fonts and icons     -->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
@@ -89,10 +88,10 @@
                 </div>
             </div>
         </nav>
-
+		 
 
         <div class="content">
-		 @RenderBody()
+		@RenderBody()
             <div class="container-fluid">
                 <div class="row">
 
@@ -114,10 +113,8 @@
     </div>
 </div>
 
-
-
-
     <!--   Core JS Files   -->
+	<script src="~/AreasContent/Layout/dataTables.min.js"></script>
     <script src="~/AreasContent/Layout/js/jquery.min.js" type="text/javascript"></script>
 	<script src="~/AreasContent/Layout/js/bootstrap.min.js" type="text/javascript"></script>
 
@@ -131,9 +128,7 @@
     <!-- Paper Dashboard Core javascript and methods for Demo purpose -->
 	<script src="~/AreasContent/Layout/js/paper-dashboard.js"></script>
 
-	<!-- Paper Dashboard DEMO methods, don't include it in your project! -->
-	<script src="~/AreasContent/Layout/js/demo.js"></script>
-
+	
 	@RenderSection("scripts", required: false)
 	</body>
 </html>
