Chưa hoàn thành

--- a/DIENMAYQUYETTIEN/Areas/Admin/Views/CashBill/Edit.cshtml
+++ b/DIENMAYQUYETTIEN/Areas/Admin/Views/CashBill/Edit.cshtml
@@ -43,7 +43,7 @@
             <div class="form-group">
                 <label for="">Địa chỉ</label>
 				<div>
-                @Html.TextAreaFor(model => model.Address, new { @class = "form-control" })
+                @Html.TextAreaFor(model => model.Address)
                 @Html.ValidationMessageFor(model => model.Address)
 				</div>
             </div>
