--- a/DIENMAYQUYETTIEN/Areas/Admin/Views/ProductAdmin/Login.cshtml
+++ b/DIENMAYQUYETTIEN/Areas/Admin/Views/ProductAdmin/Login.cshtml
@@ -14,7 +14,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!--===============================================================================================-->
-        <link rel="icon" type="image/png" href="~/Image/favicon.ico" />
+        <link rel="icon" type="image/png" href="~/AreasContent/Print/Logo_QT_PNG.png" />
         <!--===============================================================================================-->
         <link rel="stylesheet" type="text/css" href="~/AreasContent/vendor/bootstrap/css/bootstrap.min.css">
         <!--===============================================================================================-->
@@ -41,9 +41,9 @@
             <div class="container-login100">
                 <div class="wrap-login100 p-l-85 p-r-85 p-t-55 p-b-55" >
                     <form class="login100-form validate-form flex-sb flex-w">
-      <span class="login100-form-title p-b-32">
-                           <img src="~/Image/Logo_QT.jpg " width="65" height="65"/>
-						   <span>QUYẾT TIẾN</span>
+					 <span class="login100-form-title p-b-32">
+                           <img src="~/AreasContent/Print/rsz_logo_qt_png.png" style="padding-left: 50px;"/>
+						   
                         </span>
                         <br/>
                         <span class="txt1 p-b-11">
